Updated files to include other stuff for testing

--- a/CS536FinalProjectDefaultCode.ipynb
+++ b/CS536FinalProjectDefaultCode.ipynb
@@ -59,7 +59,7 @@
         "betas = [0.8, 0.9, 0.95, 0.99]\n",
         "batchsize = 8\n",
         "batchSizes = [8, 16, 32]\n",
-        "epochs = 2\n",
+        "epochs = 100\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
       ]
     },
@@ -174,15 +174,14 @@
         "        if epoch % 1 == 0:\n",
         "            for p in optimizer.param_groups:\n",
         "                p['lr'] = initial_lr/np.sqrt(1+epoch)\n",
-        "    #alex change 1\n",
-        "    # training_loss_vec.append(running_loss/check_interval)\n",
-        "    # train_acc = train_accuracy(net)\n",
-        "    # train_acc_vec.append(train_acc)\n",
-        "    # test_acc = test_accuracy(net)\n",
-        "    # test_acc_vec.append(test_acc)\n",
-        "    # print(running_loss / check_interval, file=doc)\n",
-        "    # print(test_acc, file=doc2)\n",
-        "    # print(train_acc, file=doc3)\n",
+        "    training_loss_vec.append(running_loss/check_interval)\n",
+        "    train_acc = train_accuracy(net)\n",
+        "    train_acc_vec.append(train_acc)\n",
+        "    test_acc = test_accuracy(net)\n",
+        "    test_acc_vec.append(test_acc)\n",
+        "    print(running_loss / check_interval, file=doc)\n",
+        "    print(test_acc, file=doc2)\n",
+        "    print(train_acc, file=doc3)\n",
         "    doc.close()\n",
         "    doc2.close()\n",
         "\n",
@@ -232,25 +231,7 @@
         "            _, predicted = torch.max(outputs.data, 1)\n",
         "            total += labels.size(0)\n",
         "            correct += (predicted == labels).sum().item()\n",
-        "    return 100 * correct / total\n",
-        "\n",
-        "# data sets\n",
-        "transform = transforms.Compose(\n",
-        "    [transforms.ToTensor(),\n",
-        "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
-        "\n",
-        "trainset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
-        "                                        download=True, transform=transform)\n",
-        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=batchsize,\n",
-        "                                          shuffle=True, num_workers=8,  pin_memory=True)\n",
-        "\n",
-        "testset = torchvision.datasets.CIFAR10(root='./data', train=False,\n",
-        "                                       download=True, transform=transform)\n",
-        "testloader = torch.utils.data.DataLoader(testset, batch_size=batchsize,\n",
-        "                                         shuffle=False, num_workers=8,  pin_memory=True)\n",
-        "# resnet\n",
-        "net = torch.hub.load('pytorch/vision:v0.6.0', 'resnet18', pretrained=False)\n",
-        "net.eval()"
+        "    return 100 * correct / total\n"
       ]
     },
     {
@@ -322,24 +303,34 @@
         }
       ],
       "source": [
-        "# # cifar_resnet.py\n",
+        "# data sets\n",
+        "transform = transforms.Compose(\n",
+        "    [transforms.ToTensor(),\n",
+        "     transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+        "\n",
+        "trainset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
+        "                                        download=True, transform=transform)\n",
+        "testset = torchvision.datasets.CIFAR10(root='./data', train=False,\n",
+        "                                       download=True, transform=transform)\n",
+        "# resnet\n",
+        "net = torch.hub.load('pytorch/vision:v0.6.0', 'resnet18', pretrained=False)\n",
         "net = net.to(device)\n",
+        "net.eval()\n",
+        "# # cifar_resnet.py\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "PATH = './cifar_net_Adam.pth'\n",
         "for beta in betas:\n",
         "    beta_2 = beta\n",
         "    for batchSize in batchSizes:\n",
         "        batchsize = batchSize\n",
-        "        #alex change 2\n",
-        "        # net = torch.hub.load('pytorch/vision:v0.6.0', 'resnet18', pretrained=False)\n",
-        "        # net = net.to(device)\n",
+        "        net = torch.hub.load('pytorch/vision:v0.6.0', 'resnet18', pretrained=False)\n",
         "        optimizer = optim.Adam(net.parameters(), lr=0.001, betas=(beta_1, beta), eps=1e-08, weight_decay=0, amsgrad=False)\n",
-        "        #alex change 3\n",
-        "        # trainloader = torch.utils.data.DataLoader(trainset, batch_size=batchsize,\n",
-        "        #                                   shuffle=True, num_workers=8,  pin_memory=True)\n",
         "\n",
-        "        # testloader = torch.utils.data.DataLoader(testset, batch_size=batchsize,\n",
-        "        #                                  shuffle=False, num_workers=8,  pin_memory=True)\n",
+        "        trainloader = torch.utils.data.DataLoader(trainset, batch_size=batchsize,\n",
+        "                                          shuffle=True, num_workers=8,  pin_memory=True)\n",
+        "\n",
+        "        testloader = torch.utils.data.DataLoader(testset, batch_size=batchsize,\n",
+        "                                         shuffle=False, num_workers=8,  pin_memory=True)\n",
         "        train(net, epochs, \"Exp1-training-loss-beta1=\"+str(beta_1)+\";beta2=\"+str(beta)+\";bs=\"+str(batchSize), \"Exp1-test-accuracy-beta1=\"+str(beta_1)+\";beta2=\"+str(beta_2)+\";bs=\"+str(batchsize), \"Exp1-train-accuracy-beta1=\"+str(beta_1)+\";beta2=\"+str(beta_2)+\";bs=\"+str(batchsize), 0.001, batchsize, device)\n",
         "        torch.save(net.state_dict(), PATH)\n",
         "print('Finished Training')"
