Added folder to try fixing code and getting good results.

--- a/ExperimentRuns/NewBatchSizesAndUnbalancedDataset/Cifar_Resnet_MOD.ipynb
+++ b/ExperimentRuns/NewBatchSizesAndUnbalancedDataset/Cifar_Resnet_MOD.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -337,6 +337,7 @@
         "                                  for j in range(4)))\n",
         "\n",
         "def train(net, noe, filepath_trainloss, filepath_testacc, filepath_trainacc, initial_lr,  batchsize, device):\n",
+        "    net.train()\n",
         "    doc = open(filepath_trainloss+'.txt', \"w\")\n",
         "    doc2 = open(filepath_testacc+'.txt', \"w\")\n",
         "    doc3 = open(filepath_trainacc+'.txt', \"w\")\n",
@@ -497,7 +498,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -726,6 +727,7 @@
         "                                  for j in range(4)))\n",
         "\n",
         "def train(net, noe, filepath_trainloss, filepath_testacc, filepath_trainacc, initial_lr,  batchsize, device):\n",
+        "    net.train()\n",
         "    doc = open(filepath_trainloss+'.txt', \"w\")\n",
         "    doc2 = open(filepath_testacc+'.txt', \"w\")\n",
         "    doc3 = open(filepath_trainacc+'.txt', \"w\")\n",
@@ -886,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1108,6 +1110,7 @@
         "                                  for j in range(4)))\n",
         "\n",
         "def train(net, noe, filepath_trainloss, filepath_testacc, filepath_trainacc, initial_lr,  batchsize, device):\n",
+        "    net.train()\n",
         "    doc = open(filepath_trainloss+'.txt', \"w\")\n",
         "    doc2 = open(filepath_testacc+'.txt', \"w\")\n",
         "    doc3 = open(filepath_trainacc+'.txt', \"w\")\n",
