New fixing attempts and trying to resolve conflicts

--- a/ExperimentRuns/FixAttempts/UpdatingModel/cifar_resnet_SGD_model_update.ipynb
+++ b/ExperimentRuns/FixAttempts/UpdatingModel/cifar_resnet_SGD_model_update.ipynb
@@ -5,7 +5,58 @@
    "execution_count": null,
    "id": "76183219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NVIDIA GeForce RTX 3080 Ti\n",
+      "Memory Usage:\n",
+      "Allocated: 0.0 GB\n",
+      "Cached:    0.0 GB\n",
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data\\cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lexi\\AppData\\Local\\Temp\\ipykernel_33548\\2085418390.py:161: FutureWarning: `torch.cuda.memory_cached` has been renamed to `torch.cuda.memory_reserved`\n",
+      "  print('Cached:   ', round(torch.cuda.memory_cached(0)/1024**3,1), 'GB')\n",
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data\\cifar-10-python.tar.gz to ./data\n",
+      "Files already downloaded and verified\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in C:\\Users\\Lexi/.cache\\torch\\hub\\pytorch_vision_v0.6.0\n",
+      "c:\\ProjectBreez\\gpu_env\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\ProjectBreez\\gpu_env\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,  1000] loss: 2.216, Ça coûte 18.724\n",
+      "[2,  1000] loss: 1.783, Ça coûte 18.423\n",
+      "[3,  1000] loss: 1.609, Ça coûte 24.347\n",
+      "[4,  1000] loss: 1.508, Ça coûte 26.667\n",
+      "[5,  1000] loss: 1.455, Ça coûte 27.039\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Batch size: 32\n",
@@ -268,7 +319,7 @@
     "    doc = open(filepath_trainloss+'.txt', \"w\")\n",
     "    doc2 = open(filepath_testacc+'.txt', \"w\")\n",
     "    doc3 = open(filepath_trainacc+'.txt', \"w\")\n",
-    "    check_interval=1000\n",
+    "    check_interval=50\n",
     "    batch_number = int(6000*8/(batchsize*check_interval))\n",
     "    #print(batch_number)\n",
     "    training_loss_vec = [] #np.zeros(noe*check_interval)\n",
@@ -313,7 +364,7 @@
     "    doc.close()\n",
     "    doc2.close()\n",
     "\n",
-    "    xvar=np.arange(noe*batch_number)/batch_number\n",
+    "    xvar=np.arange(len(train_acc_vec))\n",
     "    #plt.subplot(122)\n",
     "    plt.figure(1)\n",
     "    plt.title(\"Training Loss\", fontsize=15)\n",
@@ -425,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
