--- a/ExperimentRuns/FixAttempts/UpdatingModel/cifar_resnet_model_update.ipynb
+++ b/ExperimentRuns/FixAttempts/UpdatingModel/cifar_resnet_model_update.ipynb
@@ -4,7 +4,54 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "NVIDIA GeForce RTX 3080 Ti\n",
+            "Memory Usage:\n",
+            "Allocated: 0.0 GB\n",
+            "Cached:    0.0 GB\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\Lexi\\AppData\\Local\\Temp\\ipykernel_31920\\1739823571.py:162: FutureWarning: `torch.cuda.memory_cached` has been renamed to `torch.cuda.memory_reserved`\n",
+            "  print('Cached:   ', round(torch.cuda.memory_cached(0)/1024**3,1), 'GB')\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Files already downloaded and verified\n",
+            "Files already downloaded and verified\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Using cache found in C:\\Users\\Lexi/.cache\\torch\\hub\\pytorch_vision_v0.6.0\n",
+            "c:\\ProjectBreez\\gpu_env\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+            "  warnings.warn(\n",
+            "c:\\ProjectBreez\\gpu_env\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+            "  warnings.warn(msg)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1,  1000] loss: 2.330, Ça coûte 29.203\n",
+            "[2,  1000] loss: 1.261, Ça coûte 29.717\n",
+            "[3,  1000] loss: 0.828, Ça coûte 29.991\n"
+          ]
+        }
+      ],
       "source": [
         "\"\"\"\n",
         "Batch Size: 32\n",
@@ -267,7 +314,7 @@
         "    doc = open(filepath_trainloss+'.txt', \"w\")\n",
         "    doc2 = open(filepath_testacc+'.txt', \"w\")\n",
         "    doc3 = open(filepath_trainacc+'.txt', \"w\")\n",
-        "    check_interval=1000\n",
+        "    check_interval=50\n",
         "    batch_number = int(6000*8/(batchsize*check_interval))\n",
         "    #print(batch_number)\n",
         "    training_loss_vec = [] #np.zeros(noe*check_interval)\n",
@@ -312,7 +359,7 @@
         "    doc.close()\n",
         "    doc2.close()\n",
         "\n",
-        "    xvar=np.arange(noe*batch_number)/batch_number\n",
+        "    xvar=np.arange(len(train_acc_vec))\n",
         "    #plt.subplot(122)\n",
         "    plt.figure(1)\n",
         "    plt.title(\"Training Loss\", fontsize=15)\n",
@@ -428,7 +475,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.10"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
