Attempting to remove merge conflicts

--- a/ExperimentRuns/NewBatchSizes/cifar_resnet_SGD_MOD2.ipynb
+++ b/ExperimentRuns/NewBatchSizes/cifar_resnet_SGD_MOD2.ipynb
@@ -474,7 +474,7 @@
     "    doc.close()\n",
     "    doc2.close()\n",
     "\n",
-    "    xvar = np.arange(len(training_loss_vec)) / batch_number\n",
+    "    xvar = np.arange(len(training_loss_vec))\n",
     "    #plt.subplot(122)\n",
     "    plt.figure(1)\n",
     "    plt.title(\"Training Loss\", fontsize=15)\n",
