--- a/ExperimentRuns/FixAttempts/OurModel/cifar_new_resnet_original.ipynb
+++ b/ExperimentRuns/FixAttempts/OurModel/cifar_new_resnet_original.ipynb
@@ -1562,7 +1562,15 @@
             "[46,   450] loss: 0.010, Ça coûte 16.316\n",
             "[46,   500] loss: 0.020, Ça coûte 15.932\n",
             "[46,   550] loss: 0.022, Ça coûte 16.157\n",
-            "[46,   600] loss: 0.014, Ça coûte 15.794\n"
+            "[46,   600] loss: 0.014, Ça coûte 15.794\n",
+            "[46,   650] loss: 0.010, Ça coûte 16.121\n",
+            "[46,   700] loss: 0.009, Ça coûte 16.448\n",
+            "[46,   750] loss: 0.012, Ça coûte 16.226\n",
+            "[46,   800] loss: 0.013, Ça coûte 15.882\n",
+            "[46,   850] loss: 0.012, Ça coûte 15.969\n",
+            "[46,   900] loss: 0.005, Ça coûte 15.794\n",
+            "[46,   950] loss: 0.009, Ça coûte 15.847\n",
+            "[46,  1000] loss: 0.016, Ça coûte 15.876\n"
           ]
         }
       ],
